--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -21,7 +21,14 @@
     <fragment
         android:id="@+id/detailFragment"
         android:name="com.example.android.momo_assignment.ui.detail.DetailFragment"
-        android:label="DetailFragment" />
+        android:label="DetailFragment" >
+
+        <argument
+            android:name="animal"
+            app:argType="com.example.android.momo_assignment.logic.model.animal.Animal"
+            app:nullable="false"/>
+
+    </fragment>
     <fragment
         android:id="@+id/homeFragment"
         android:name="com.example.android.momo_assignment.ui.home.HomeFragment"
